# sol2ink-workshop

./: .gitignore  Deploy.toml  ERC20.sol  readme.md  sol2ink  todo.txt
contract/: Cargo.toml  lib.rs
contracts/contract/: Cargo.toml  lib.rs
src/: Cargo.toml  lib.rs
src/impls/: staking.rs
src/traits/: staking.rs
