[package]
name = "fungible-token"
version = "0.1.0"
authors = ["Dominik Krížo <dominik.krizo@727.ventures>"]
edition = "2021"

[dependencies]
ink = { version = "4.1.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
openbrush = { git="https://www.github.com/Brushfam/openbrush-contracts.git", tag="3.1.1", default-features = false, features = ["psp22"]}

[dev-dependencies]
ink_e2e = "4.1.1"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std"
]
ink-as-dependency = []
e2e-tests = []
